--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Welcome to my website</title>
 </head>
 
-  <body>
+  <body class="bg-secondary">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Anthony Langdon</a>
@@ -22,7 +22,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://anthonylangdon.substack.com">Substack</a>
+                <a class="nav-link" href="https://anthonylangdon.substack.com">Substack <span class="badge bg-secondary">New!</span></a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -43,24 +43,24 @@
           </div>
         </div>
     </nav>
-        <h1 class="d-flex justify-content-center my-5">Welcome to My Website</h1>
+        <h1 class="d-flex justify-content-center my-5 text-black">Welcome to My Website</h1>
         <div class="container">
             <div class="row">
               <div class="col-md-8">
-                <p>Hi there! I'm Anthony, a writer and SEO professional based in Orlando, Florida. I mostly write about sports, like this:</p>
+                <p class="text-white">Hi there! I'm Anthony, a writer and SEO professional based in Orlando, Florida. I mostly write about sports, like this:</p>
                 <div class="col-sm-6">
                     <div class="card" style="width: 18rem;">
                         <img src="Images/Kraft_Meek.png" class="card-img-top" alt="Robert Kraft smiling with Meek Mill">
-                        <div class="card-body">
-                        <h5 class="card-title">Ranking NFL Owners by How Much They Suck</h5>
-                        <p class="card-text">A thorough scouting report of the landlord nepo-babies that own our Sundays.</p>
+                        <div class="card-body bg-dark">
+                        <h5 class="card-title text-white">Ranking NFL Owners by How Much They Suck</h5>
+                        <p class="card-text text-white">A thorough scouting report of the landlord nepo-babies that own our Sundays.</p>
                         <a href="https://anthonylangdon.substack.com/p/ranking-nfl-owners-by-how-much-they" class="btn btn-primary">Go read it!</a>
                         </div>
                     </div>
                 </div>
               </div>
               <div class="col-md-4">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               </div>
         </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>  
